# terminyl

./: CMakeLists.txt  README.md  install.sh  out.txt
.cache/clangd/index/: main.cpp.8C19DDB90B0D67A7.idx
include/: document.hpp  emitter.hpp  io.hpp  lexer.hpp  parser.hpp  source.hpp  text_accumulator.hpp  token.hpp  token_type.hpp
src/: document.cpp  emitter.cpp  io.cpp  lexer.cpp  main.cpp  parser.cpp  test.ascii  test.termy  token.cpp
